...
  "translation": {
    "camera": {
      "requesting_permissions": "Richiesta permessi fotocamera...",
      "not_found": "Fotocamera non trovata"
    },
    "sections": {
      "system": "SISTEMA",
      "lens": "OBIETTIVO",
      "body": "CORPO",
      "film": "PELLICOLA"
    },
    "modules": {
      "preferences": "Preferenze",
      "optics": "Ottica",
      "flaws": "Difetti Ottici",
      "exposure": "Esposizione",
      "lighting": "Illuminazione",
      "development": "Sviluppo",
      "texture": "Texture",
      "capture": "Acquisizione",
      "debug": "Debug"
    },
    "parameters": {
      "amount": "QUANTITÀ",
      "grain": "GRANA",

      "chroma": "CROMINANZA",
...
